Fix header title vertical alignment
- Add line-height: 1.2 and margin-top: 0.2em to .home-title
- Improves alignment between header title and page content headings

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -89,6 +89,8 @@ header .main {
 .home-title{
   font-size: 1.6em;
   color: #1278E0;
+  line-height: 1.2;
+  margin-top: 0.2em;
 }
 .socials {
   /* flex-child */
